# PhotonTERM

./: .gitignore  AGENTS.md  CMakeLists.txt  GNUmakefile  ICONS.md  README.md
.clio/: instructions.md
.github/workflows/: build.yml  update-homebrew-cask.yml
scripts/: build-deps.sh  gen-terminus-embed.sh  release.sh  sign-macos.sh  win-check.sh
src/photonterm/: CMakeLists.txt  DarwinWrappers.h  DarwinWrappers.m  GNUmakefile  Info.plist  PhotonTERM.entitlements  PhotonTERM.icns  early_init.c  photon_bbs.h  photon_bbslist.c  photon_bbslist.h  photon_compat.h  photon_conn.c  photon_conn.h  photon_cp437_font.c  photon_cp437_font.h  photon_debug.c  photon_debug.h  photon_main.c  photon_paths.h  photon_sdl.c  photon_sdl.h  photon_settings.c  photon_settings.h  photon_store.c  photon_store.h  photon_term.c  photon_term.h  photon_terminus_font.c  photon_terminus_font.h  photon_ui.c  photon_ui.h  photon_vte.c  photon_vte.h  photon_xfer.c  photon_xfer.h  photonterm.rc
src/photonterm/icons/: README.md  generate-icons.sh  generate-unix.sh  generate-win.sh  generate.sh
